Fixed some odd font stuff after rebuilding package
Apparently, I didn't have font-awesome properly installed and my styles
in Angular-cli.json were incorrectly. setup. Ended up breaking the
spinning function and the default font of the site was too big.

Installed Font-awesome, fixed the default font, and now the spinner is
working.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-weight: 400;
+}
 .ng-valid[required], .ng-valid.required  {
   border-left: 5px solid #42A948; /* green */
 }
@@ -6,3 +12,4 @@
 .ng-invalid:not(form)  {
   border-left: 5px solid #a94442; /* red */
 }
+
